kubernetes/whoami-test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: zitadel-auth
          namespace: traefik
